correct header styles to prevent overflow

--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   background-color: $color-bg-basic;
 
@@ -11,7 +12,7 @@
 
     flex-direction: row;
     justify-content: space-between;
-    gap: 33px;
+    gap: 66px;
   }
 
   @media #{$on-desktop} {
@@ -19,7 +20,7 @@
 
     flex-direction: row;
     justify-content: space-between;
-    gap: 33px;
+    gap: 66px;
 
     background-color: transparent;
   }
@@ -34,6 +35,7 @@
 .header__icons-container {
   padding-top: 13px;
   padding-bottom: 15px;
+  width: 100%;
 
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -55,7 +57,7 @@
     padding-right: 0;
     padding-bottom: 0;
 
-    width: auto;
+    width: fit-content;
     display: flex;
     gap: 13px;
     flex-shrink: 0;
@@ -154,7 +156,7 @@
   width: 100%;
   height: 2px;
   background-color: $color-text-strong;
-  transition: opacity $transition-basic 0.2s;
+  transition: opacity 0s 0.25s;
 
   .header__menu-toggle--is-opened & {
     opacity: 0;
@@ -219,8 +221,9 @@
 
 .header__nav {
   @media #{$on-mobile} {
-    text-align: center;
+    width: 100%;
 
+    text-align: center;
     background-color: $color-bg-basic;
 
     &--is-opened {
@@ -243,6 +246,11 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+  }
+
+  @media #{$on-desktop} {
+    padding-left: 15px;
+    max-width: 50%;
   }
 }
 
@@ -271,14 +279,15 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
-    gap: 12px 33px;
+    gap: 24px 33px;
   }
 }
 
 .header__nav-item {
   position: relative;
 
-  padding: 22px 0;
+  padding-top: 21px;
+  padding-bottom: 21px;
 
   @media #{$on-mobile} {
     &::after {
@@ -302,10 +311,17 @@
 .header__nav-link {
   position: relative;
 
+  margin-left: auto;
+  margin-right: auto;
+
+  display: block;
+  width: fit-content;
+
   font-family: $font-family-accent;
   font-size: 20px;
-  line-height: 20px;
+  line-height: 24px;
   text-transform: uppercase;
+  overflow-wrap: break-word;
   color: $color-text-strong;
 
   transition: opacity $transition-basic;
@@ -320,6 +336,7 @@
 
   @media #{$on-tablet-desktop} {
     font-size: 18px;
+    text-align: right;
     line-height: 24px;
   }
 
